# knxR2

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  _disasMsg.c  _knxfsm.c  _shmblock.c  eiblog.c  eiblog.h  hdlheating.c  hdlheatpump.c  hdlpellet.c  hdlsolar.c  hdltimer.c  knxbackbone.c  knxbackbone.h  knxbbi.c  knxdevbase.c  knxipbridge.c  knxipbridge.h  knxlog.c  knxlog.h  knxmon.c  knxprogadr.c  knxprot.h  knxsim.c  knxtpbridge.c  knxtpbridge.h  knxtrace.c  knxwebbridge.c  knxwebbridge.h  myxml.c  myxml.h  nodedata.h  nodeinfo.h  readb1.c  readbit.c  sendb1.c  sendbit.c  sendf16.c  sendfloat.c  sendint.c  sendtime.c  (+5 more)
knx.d/: baos.xml  baos.xml.sample  knx.ini.sample  knxLog.mysql.empty
libs/: CMakeLists.txt  debug.c  debug.h  eib.c  eib.h  inilib.c  inilib.h  mylib.c  mylib.h
